...
            modifier = Modifier.fillMaxWidth(),
            verticalAlignment = Alignment.CenterVertically
        ) {
            SearchInputField(
                modifier = Modifier.weight(1f),
                value = state.searchQuery,
                placeholder = "Search Recipe",
            ) {
                onAction(SearchRecipesAction.OnSearchRecipes(it))
            }
            Spacer(modifier = Modifier.width(20.dp))
            FilterBox {
                onAction(SearchRecipesAction.OnTapFilterButton)
...
        state = SearchRecipeState(
            searchQuery = "query",
            searchText = "Search Result",
            filteredRecipesText = "10 results",
            filteredRecipes = listOf(
                Recipe(
                    title = "Traditional spare ribs baked",
                    chef = "Chef John",
                    time = "20 min",
                    category = "Chinese",
                    rating = 4.0,
                    imageUrls = "https://cdn.pixabay.",
                    createdAt = System.currentTimeMillis(),
...
