...
                .fillMaxWidth()
                .padding(horizontal = 30.dp, vertical = 10.dp),
            horizontalArrangement = Arrangement.SpaceBetween
        ) {
            Icon(
                imageVector = Icons.AutoMirrored.Default.ArrowBack,
                contentDescription = "back",
                modifier = Modifier.size(20.dp)
            )
            Icon(
                imageVector = Icons.Default.MoreHoriz,
                contentDescription = "more",
                modifier = Modifier.size(20.dp)
...
                address = "Seoul"
            ),
            selectedIndex = 1,
            ingridents = listOf(
                Ingrident(
                    id = 1,
                    name = "Tomato",
                    amount = 500,
                    image = "https://cdn.pixabay.com/photo/2017/10/06/17",
                ),
                Ingrident(
                    id = 1,
                    name = "Tomato",
...
